# lp_solve

./: .gitignore  CMakeLists.txt  README.txt  configure
.github/workflows/: build.yml
bfp/bfp_LUSOL/: cvc6.bat  cvc8NOmsvcrt.bat  cvc8msvcrt.bat
lp_solve/: ccc  ccc.osx  lp_solve.c  solve.bat  solve.txt  solve1.bat  solve1.txt
lpsolve55/: ccc  ccc.osx  lpsolve.rc
sourceforge_5.5.2.5/: lp_solve_5.5.2.5.chm
